--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@strapi/plugin-users-permissions": "4.13.6",
     "@strapi/strapi": "4.13.6",
     "better-sqlite3": "8.0.1",
+    "multi-nested-select": "^1.2.1",
     "mysql2": "^3.5.2",
-    "strapi-plugin-custom-api": "^1.0.4"
+    "pg": "^8.11.3",
+    "react-modal": "^3.16.1",
+    "react-select": "^5.7.7"
   },
   "author": {
     "name": "A Strapi developer"
