--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@strapi/plugin-i18n": "4.15.0",
     "@strapi/plugin-users-permissions": "4.15.0",
     "@strapi/strapi": "4.15.0",
+    "multi-nested-select": "^1.2.1",
     "mysql2": "^3.6.1",
     "pg": "^8.11.3",
-    "multi-nested-select": "^1.2.1"
+    "xlsx": "^0.18.5"
   },
   "author": {
     "name": "A Strapi developer"
