Hetzner's strapi instance code pushed

--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "multi-nested-select": "^1.2.1",
     "mysql2": "^3.6.1",
     "pg": "^8.11.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^5.3.4",
+    "styled-components": "^5.3.11",
     "xlsx": "^0.18.5"
   },
   "author": {
